--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   hive_flutter: ^1.1.0
   hive_generator: ^2.0.0
   path_provider: ^2.0.14
+  assets_audio_player: ^3.0.6
+  flutter_launcher_icons: ^0.12.0
 
 dev_dependencies:
   flutter_test:
@@ -75,11 +77,13 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  generate: true
 
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
     - assets/icons/
+    - assets/sounds/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -106,5 +110,10 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
-flutter_intl:
-  enabled: true
+#flutter_intl:
+#  enabled: true
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icons/bot.gif"
+  min_sdk_android: 21 # android min sdk min:16, default 21
